# secondbrain

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
openspec/: project.md
openspec/changes/add-dirty-vault-handling/: design.md  proposal.md  tasks.md
openspec/changes/add-dirty-vault-handling/specs/obsidian-sync/: spec.md
openspec/changes/add-new-project-command/: design.md  proposal.md  tasks.md
openspec/changes/add-new-project-command/specs/slash-commands/: spec.md
openspec/changes/add-second-brain-bot/: design.md  proposal.md  tasks.md
openspec/changes/add-second-brain-bot/specs/ai-provider/: spec.md
openspec/changes/add-second-brain-bot/specs/cli-service/: spec.md
openspec/changes/add-second-brain-bot/specs/discussion-mode/: spec.md
openspec/changes/add-second-brain-bot/specs/note-capture/: spec.md
openspec/changes/add-second-brain-bot/specs/obsidian-sync/: spec.md
openspec/changes/add-second-brain-bot/specs/project-store/: spec.md
openspec/changes/add-second-brain-bot/specs/slash-commands/: spec.md
openspec/changes/refine-dirty-vault-detection/: design.md  proposal.md  tasks.md
openspec/changes/update-note-capture-protocol/: design.md  proposal.md  tasks.md
src/secondbrain/: ai.py  bot.py  cli.py  config.py  discussion.py  handlers.py  obsidian.py  service.py  store.py  vault_import.py
tests/: test_ai.py  test_cli.py  test_commands.py  test_config.py  test_discussion.py  test_handlers.py  test_obsidian.py  test_service.py  test_smoke.py  test_store.py  test_vault_import.py
(+4 files in other folders)
